# qr-code-generator

./: .gitignore  Cargo.toml  Makefile  README.md  git-set-remotes.sh
src/: args.rs  config.rs  convert_to_u8.rs  generator.rs  main.rs  utils.rs
src/generator/: generator.rs  mod.rs  saver_binary.rs  saver_image.rs
src/qr_library/: convert_to_u8.rs  defines.rs  generator.rs  mod.rs  my_qr_core.rs
