[package]
name = "zx-qr-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
image = "0.25.2"
qrcode = { version = "0.14.1", default-features = true }
